--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "config",
     "eslint"
   ],
-  "homepage": "https://github.com/MartinDoyleUK/martindoyle-eslint#README.md",
   "license": "MIT",
+  "homepage": "https://github.com/MartinDoyleUK/martindoyle-eslint#README.md",
   "author": "Martin Doyle",
   "repository": {
     "type": "git",
@@ -27,12 +27,14 @@
   },
   "devDependencies": {
     "@martindoyle/tsconfig": "^1.0.0",
-    "@types/eslint__js": "^8.42.3",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.13.0"
+    "eslint": "^9.5.0",
+    "typescript": "5.4.5"
   },
   "dependencies": {
-    "@eslint/js": "^9.5.0",
+    "eslint-config-canonical": "^43.0.12"
+  },
+  "peerDependencies": {
     "eslint": "^9.5.0"
-  }
+  },
+  "type": "module"
 }
