--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@martindoyle/tsconfig/node",
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+    "checkJs": true,
     "outDir": "dist",
   },
 }
