--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/package",
   "name": "@martindoyle/eslint-config",
   "version": "1.0.0",
-  "description": "Common TSConfig files",
+  "description": "Martin's eslint (flat) config",
   "keywords": [
     "config",
     "eslint"
@@ -16,7 +16,8 @@
   },
   "type": "module",
   "files": [
-    "dist/"
+    "eslint.config.js",
+    "overrides/"
   ],
   "main": "./eslint.config.js",
   "scripts": {
@@ -25,11 +26,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "eslint-config-canonical": "^43.0.12"
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "eslint-config-canonical": "^43.0.12",
+    "eslint-plugin-import": "^2.29.1"
   },
   "devDependencies": {
-    "@martindoyle/tsconfig": "^1.0.0",
+    "@martindoyle/tsconfig": "^1.1.0",
     "eslint": "^9.5.0",
+    "prettier": "^3.3.2",
     "typescript": "5.4.5"
   },
   "peerDependencies": {
